# htm-wl

./: .gitignore  Makefile  README.md  config.demo.yaml  config.example.yaml  environment.yml  pyproject.toml  requirements.txt  run_pipeline.yaml
.github/workflows/: ci.yml
api/: main.py
app/: app.py
htm_wl/: htm_session.py  io.py  metrics.py  spike_detector.py
scripts/: eval_from_scores.py  evaluate.py  live_demo.py  make_demo.py  plot_scores.py  score.py
tests/: test_spike_detector.py
